Hello3D project updated with result

--- a/Hello3D/Exericio8/Exericio8.vcxproj.filters
+++ b/Hello3D/Exericio8/Exericio8.vcxproj.filters
@@ -22,4 +22,7 @@
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="RESULT.md" />
+  </ItemGroup>
 </Project>
