--- a/Hello3D/Exericio8/Exericio8.vcxproj
+++ b/Hello3D/Exericio8/Exericio8.vcxproj
@@ -147,6 +147,9 @@
     <ClCompile Include="..\glad.c" />
     <ClCompile Include="Origem.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="RESULT.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
